# SAF---Auditor_Inteligente

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: saf.db
data/fixtures/: 01_contrato_transportadora.csv  02_erp_wms.csv  03_fatura_transportadora.csv  04_rastreamento.csv  05_erp_wms_BRUTO.csv  06_fatura_transportadora_BRUTA.csv  07_SAF_massa_consolidada.xlsx  99_gabarito_cenarios_fatura.csv  saf_massa_teste.db
exports/: contestacao_frete.xlsx
src/saf/: __init__.py  api.py  audit.py  campos.py  cli.py  database.py  exporter.py  ia.py  normalizacao.py  schemas.py
tests/: test_audit.py  test_ia.py
